{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 178,
  "lineage": "b698ca05-dc6a-93af-b6ec-f1f350c29a30",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "kubernetes_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:857124718076:loadbalancer/kubernetes",
            "availability_zones": [
              "ap-northeast-1a"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": false,
            "dns_name": "kubernetes-1861523592.ap-northeast-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:8080/healthz",
                "timeout": 15,
                "unhealthy_threshold": 2
              }
            ],
            "id": "kubernetes",
            "idle_timeout": 60,
            "instances": [
              "i-04d4e6cb844386f41",
              "i-0505e8a2cce1cbb89",
              "i-0866831caa9a6c9d4"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 6443,
                "instance_protocol": "TCP",
                "lb_port": 6443,
                "lb_protocol": "TCP"
              }
            ],
            "name": "kubernetes",
            "security_groups": [
              "sg-0d21cdfa7b7c8f864"
            ],
            "source_security_group": "857124718076/kubernetes-api",
            "source_security_group_id": "sg-0d21cdfa7b7c8f864",
            "subnets": [
              "subnet-029a92b80b0243eab"
            ],
            "tags": {
              "Name": "kubernetes",
              "Owner": "Kubernetes"
            },
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_instance.controller",
            "aws_security_group.kubernetes",
            "aws_security_group.kubernetes_api",
            "aws_subnet.kubernetes",
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "controller",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04e6facfaefdca6ec",
            "arn": "arn:aws:ec2:ap-northeast-1:857124718076:instance/i-04d4e6cb844386f41",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04d4e6cb844386f41",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "olcne-on-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f3a636e0f08cca74",
            "private_dns": "ip-10-43-0-20.ap-northeast-1.compute.internal",
            "private_ip": "10.43.0.20",
            "public_dns": "ec2-18-181-200-68.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.181.200.68",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a545025e484eeda6",
                "volume_size": 2,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-029a92b80b0243eab",
            "tags": {
              "Name": "controller-0",
              "Owner": "Kubernetes",
              "ansibleFilter": "Kubernetes01",
              "ansibleNodeName": "controller0",
              "ansibleNodeType": "controller"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06dd4656db94f12cf"
            ]
          },
          "dependencies": [
            "aws_security_group.kubernetes",
            "aws_security_group.kubernetes_api",
            "aws_subnet.kubernetes",
            "aws_vpc.kubernetes"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04e6facfaefdca6ec",
            "arn": "arn:aws:ec2:ap-northeast-1:857124718076:instance/i-0505e8a2cce1cbb89",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0505e8a2cce1cbb89",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "olcne-on-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-074929f5af2501cd9",
            "private_dns": "ip-10-43-0-21.ap-northeast-1.compute.internal",
            "private_ip": "10.43.0.21",
            "public_dns": "ec2-54-95-49-164.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.95.49.164",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-06a9592cd8750914b",
                "volume_size": 2,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-029a92b80b0243eab",
            "tags": {
              "Name": "controller-1",
              "Owner": "Kubernetes",
              "ansibleFilter": "Kubernetes01",
              "ansibleNodeName": "controller1",
              "ansibleNodeType": "controller"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06dd4656db94f12cf"
            ]
          },
          "dependencies": [
            "aws_security_group.kubernetes",
            "aws_security_group.kubernetes_api",
            "aws_subnet.kubernetes",
            "aws_vpc.kubernetes"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04e6facfaefdca6ec",
            "arn": "arn:aws:ec2:ap-northeast-1:857124718076:instance/i-0866831caa9a6c9d4",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0866831caa9a6c9d4",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "olcne-on-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0be70eb96d617f200",
            "private_dns": "ip-10-43-0-22.ap-northeast-1.compute.internal",
            "private_ip": "10.43.0.22",
            "public_dns": "ec2-54-95-139-38.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.95.139.38",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-06759344ab42c96a8",
                "volume_size": 2,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-029a92b80b0243eab",
            "tags": {
              "Name": "controller-2",
              "Owner": "Kubernetes",
              "ansibleFilter": "Kubernetes01",
              "ansibleNodeName": "controller2",
              "ansibleNodeType": "controller"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06dd4656db94f12cf"
            ]
          },
          "dependencies": [
            "aws_security_group.kubernetes",
            "aws_security_group.kubernetes_api",
            "aws_subnet.kubernetes",
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04e6facfaefdca6ec",
            "arn": "arn:aws:ec2:ap-northeast-1:857124718076:instance/i-03d1fa921ee40e2b9",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03d1fa921ee40e2b9",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "olcne-on-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ee71b640c5d76c61",
            "private_dns": "ip-10-43-0-30.ap-northeast-1.compute.internal",
            "private_ip": "10.43.0.30",
            "public_dns": "ec2-13-112-66-24.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "13.112.66.24",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f6847750c8a9b8b8",
                "volume_size": 2,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-029a92b80b0243eab",
            "tags": {
              "Name": "worker-0",
              "Owner": "Kubernetes",
              "ansibleFilter": "Kubernetes01",
              "ansibleNodeName": "worker0",
              "ansibleNodeType": "worker"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06dd4656db94f12cf"
            ]
          },
          "dependencies": [
            "aws_security_group.kubernetes",
            "aws_security_group.kubernetes_api",
            "aws_subnet.kubernetes",
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:857124718076:internet-gateway/igw-0db23948341429682",
            "id": "igw-0db23948341429682",
            "owner_id": "857124718076",
            "tags": {
              "Name": "kubernetes",
              "Owner": "Kubernetes"
            },
            "vpc_id": "vpc-053188b34b8a0bed9"
          },
          "dependencies": [
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "kubernetes",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02b318f1814a1d155",
            "owner_id": "857124718076",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0db23948341429682",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kubernetes",
              "Owner": "Kubernetes"
            },
            "vpc_id": "vpc-053188b34b8a0bed9"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "kubernetes",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6d778aa6160cb36",
            "route_table_id": "rtb-02b318f1814a1d155",
            "subnet_id": "subnet-029a92b80b0243eab"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.kubernetes",
            "aws_subnet.kubernetes",
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kubernetes",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:857124718076:security-group/sg-06dd4656db94f12cf",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06dd4656db94f12cf",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.43.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.43.0.0/16"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0d21cdfa7b7c8f864"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "kubernetes",
            "name_prefix": null,
            "owner_id": "857124718076",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kubernetes",
              "Owner": "Kubernetes"
            },
            "timeouts": null,
            "vpc_id": "vpc-053188b34b8a0bed9"
          },
          "dependencies": [
            "aws_security_group.kubernetes_api",
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kubernetes_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:857124718076:security-group/sg-0d21cdfa7b7c8f864",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d21cdfa7b7c8f864",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.43.0.0/16"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "kubernetes-api",
            "name_prefix": null,
            "owner_id": "857124718076",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kubernetes-api",
              "Owner": "Kubernetes"
            },
            "timeouts": null,
            "vpc_id": "vpc-053188b34b8a0bed9"
          },
          "dependencies": [
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kubernetes",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:857124718076:subnet/subnet-029a92b80b0243eab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.43.0.0/16",
            "id": "subnet-029a92b80b0243eab",
            "map_public_ip_on_launch": false,
            "owner_id": "857124718076",
            "tags": {
              "Name": "kubernetes",
              "Owner": "Kubernetes"
            },
            "vpc_id": "vpc-053188b34b8a0bed9"
          },
          "dependencies": [
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kubernetes",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:857124718076:vpc/vpc-053188b34b8a0bed9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.43.0.0/16",
            "default_network_acl_id": "acl-0d4f8791f350866ae",
            "default_route_table_id": "rtb-0d0943ea766426202",
            "default_security_group_id": "sg-048af8b3a35557106",
            "dhcp_options_id": "dopt-04c9f463",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-053188b34b8a0bed9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d0943ea766426202",
            "owner_id": "857124718076",
            "tags": {
              "Name": "kubernetes",
              "Owner": "Kubernetes"
            }
          }
        }
      ]
    }
  ]
}